updated starting chuncks

--- a/vignettes/hydroTSM_Vignette-knitr.Rnw
+++ b/vignettes/hydroTSM_Vignette-knitr.Rnw
@@ -19,6 +19,14 @@
 
 \begin{document}
 
+<<include=FALSE>>=
+library(knitr)
+opts_chunk$set(
+concordance=TRUE
+)
+@
+
+
 \maketitle
 
 \section{Installation}
