--- a/NEWS
+++ b/NEWS
@@ -1,10 +1,14 @@
 NEWS/ChangeLog for hydroTSM
 --------------------------
 0.7-0   (under-development)
-        o 'hydroplot': -) now works correctly with zoo objects that have multiple columns, and separate (internal) functions are provided for zoo and data.frame objects.
-                       -) 'from' argument has a default value of NULL
-                       -) 'to' argument has a default value of NULL
-                       -) new argument 'dates' in order to facilitate the transformation into zoo when working with data.frame objects
+        o 'hydroplot'   : -) now works correctly with zoo objects that have multiple columns, and separate (internal) functions are provided for zoo and data.frame objects.
+                          -) 'from' argument has a default value of NULL
+                          -) 'to' argument has a default value of NULL
+                          -) new argument 'dates' in order to facilitate the transformation into zoo when working with data.frame objects
+        o 'sname2plot'  : -) now works correctly with zoo objects that have multiple columns, and separate (internal) functions are provided for zoo and data.frame objects.
+                          -) 'from' argument has a default value of NULL
+                          -) 'to' argument has a default value of NULL
+        o NAMESPACE file: -) 'hydroplot' and 'sname2plot' are now exported S3 methods
 
 
 0.6-0   11-Mar-2020
