--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,9 @@ NEWS/ChangeLog for hydroTSM
         o 'sname2plot'  : -) now works correctly with zoo objects that have multiple columns, and separate (internal) functions are provided for zoo and data.frame objects.
                           -) 'from' argument has a default value of NULL
                           -) 'to' argument has a default value of NULL
+        o 'climograph'  : -) now it plots the minimum and maximum temperature when they are provided 
+                          -) new argument 'tmn.col' to choose the color to be used to plot the minimum monthly temperature
+                          -) new argument 'tmx.col' to choose the color to be used to plot the maximum monthly temperature
         o NAMESPACE file: -) 'hydroplot' and 'sname2plot' are now exported S3 methods
 
 
