--- a/NEWS
+++ b/NEWS
@@ -1,21 +1,23 @@
 NEWS/ChangeLog for hydroTSM
 --------------------------
 0.7-0   (under-development)
-        o 'hydroplot'   : -) now works correctly with zoo objects that have multiple columns, and separate (internal) functions are provided for zoo and data.frame objects.
-                          -) 'from' argument has a default value of NULL
-                          -) 'to' argument has a default value of NULL
-                          -) new argument 'dates' in order to facilitate the transformation into zoo when working with data.frame objects
-        o 'sname2plot'  : -) now works correctly with zoo objects that have multiple columns, and separate (internal) functions are provided for zoo and data.frame objects.
-                          -) 'from' argument has a default value of NULL
-                          -) 'to' argument has a default value of NULL
-        o 'climograph'  : -) now it plots the minimum and maximum temperature when they are provided 
-                          -) new argument 'tmn.col' to choose the color to be used to plot the minimum monthly temperature
-                          -) new argument 'tmx.col' to choose the color to be used to plot the maximum monthly temperature
-                          -) new argument 'pcp.labels' to decide whether to show the numeric values above the monthly precipitation bars
-                          -) new argument 'tmean.labels' to decide whether to show the numeric values above the monthly mean temperature lines
-                          -) new argument 'tmx.labels' to decide whether to show the numeric values above the monthly maximum temperature lines
-                          -) new argument 'tmn.labels' to decide whether to show the numeric values above the monthly minimum temperature lines
-        o NAMESPACE file: -) 'hydroplot' and 'sname2plot' are now exported S3 methods
+        o 'hydroplot'   :   -) now works correctly with zoo objects that have multiple columns, and separate (internal) functions are provided for zoo and data.frame objects.
+                            -) 'from' argument has a default value of NULL
+                            -) 'to' argument has a default value of NULL
+                            -) new argument 'dates' in order to facilitate the transformation into zoo when working with data.frame objects
+        o 'sname2plot'  :   -) now works correctly with zoo objects that have multiple columns, and separate (internal) functions are provided for zoo and data.frame objects.
+                            -) 'from' argument has a default value of NULL
+                            -) 'to' argument has a default value of NULL
+        o 'climograph'  :   -) now it plots the minimum and maximum temperature when they are provided 
+                            -) new argument 'tmn.col' to choose the color to be used to plot the minimum monthly temperature
+                            -) new argument 'tmx.col' to choose the color to be used to plot the maximum monthly temperature
+                            -) new argument 'pcp.labels' to decide whether to show the numeric values above the monthly precipitation bars
+                            -) new argument 'tmean.labels' to decide whether to show the numeric values above the monthly mean temperature lines
+                            -) new argument 'tmx.labels' to decide whether to show the numeric values above the monthly maximum temperature lines
+                            -) new argument 'tmn.labels' to decide whether to show the numeric values above the monthly minimum temperature lines
+        o 'subdaily2daily': -) new argument 'start.fmt' to indicate the format used to provide 'start'
+                            -) new argument 'tz' to indicate the time zone used for both 'start' argument and the datetimes of the object
+        o NAMESPACE file:   -) 'hydroplot' and 'sname2plot' are now exported S3 methods
 
 
 0.6-0   11-Mar-2020
