--- a/NEWS
+++ b/NEWS
@@ -17,10 +17,19 @@ NEWS/ChangeLog for hydroTSM
                             -) new argument 'tmean.labels' to decide whether to show the numeric values above the monthly mean temperature lines
                             -) new argument 'tmx.labels' to decide whether to show the numeric values above the monthly maximum temperature lines
                             -) new argument 'tmn.labels' to decide whether to show the numeric values above the monthly minimum temperature lines
+                            -) new argument 'plot.pcp.probs' to decide whether to show uncertainty values around the monthly mean precipitation values
+                            -) new argument 'pcp.probs' to define the quantile values used to show uncertainty values around the monthlyy mean precipitation values
+                            -) new argument 'plot.temp.probs' to decide whether to show uncertainty values around the monthly mean temperature values (and also around maximum and minimum temperature, when provided) 
+                            -) new argument 'temp.probs' to define the quantile values used to show uncertainty values around the monthly mean temperature values (and also around maximum and minimum temperature, when provided) 
+                            -) new argument 'temp.probs.col' to define the colors used to show uncertainty values around the monthly mean temperature values (and also around maximum and minimum temperature, when provided) 
+                            -) new argument 'temp.probs.alpha' to define the transparency level applied to 'temp.probs.col'
+                            -) new arguments 'lat' and 'lon' to define and show the latitude and longitude, respectively, for which the climograph was plotted for
         o 'subdaily2daily': -) new argument 'start.fmt' to indicate the format used to provide 'start'
                             -) new argument 'tz' to indicate the time zone used for both 'start' argument and the datetimes of the object
         o 'daily2annual'  : -) for zoo objects, dates are correctly given in the output when FUN=min or FUN=max (e.g. for getting the date of the annual maximum or minimum)
-        o NAMESPACE file:   -) 'hydroplot' and 'sname2plot' are now exported S3 methods
+        o 'izoo2rzoo'     : -) new argument 'tz' to correctly handle subdaily zoo objects (e.g., forcing GMT as time zone instead of the local time zone).
+        o 'hydrokrige'    : -) falgged as 'deprecated' (in the future it will be improved and moved into a different package)
+        o NAMESPACE file:   -) 'hydroplot', 'sname2plot' and 'hypsometric' are now exported S3 methods
 
 
 0.6-0   11-Mar-2020
