--- a/vignettes/hydroTSM_Vignette-knitr.Rmd
+++ b/vignettes/hydroTSM_Vignette-knitr.Rmd
@@ -294,9 +294,9 @@ Maximum annual value of 5-day total precipitation
 
 # Climograph
 
-Since v0.5-0, `hydroTSM` includes a function to plot a climograph, considering not only precipitation but air temperature data as well:
+Since v0.5-0, `hydroTSM` includes a function to plot a climograph, considering not only precipitation but air temperature data as well.
 
-```{r climograph, fig.width = 8, fig.height = 7, , dpi=100, fig.align = "center", dev.args=list(pointsize = 9)}
+```{r climograph1, fig.width = 8, fig.height = 7, , dpi=100, fig.align = "center", dev.args=list(pointsize = 9)}
 # Loading daily ts of precipitation, maximum and minimum temperature
 data(MaquehueTemuco)
 
@@ -304,25 +304,38 @@ data(MaquehueTemuco)
 pcp <- MaquehueTemuco[, 1]
 tmx <- MaquehueTemuco[, 2]
 tmn <- MaquehueTemuco[, 3]
-     
-## Plotting a full climograph
+```
+
+Plotting a full climograph:
+```{r climograph2, fig.width = 8, fig.height = 7, , dpi=100, fig.align = "center", dev.args=list(pointsize = 9)}
 m <- climograph(pcp=pcp, tmx=tmx, tmn=tmn, na.rm=TRUE, 
                 main="Maquehue Temuco Ad (Chile)", lat=-38.770, lon=-72.637)
+```
 
-## Plotting a climograph with uncertainty bands around mean values, but with no labels for tmx and tmn
+\newpage
+Plotting a climograph with uncertainty bands around mean values, but with no labels for tmx and tmn:
+```{r climograph3, fig.width = 8, fig.height = 7, , dpi=100, fig.align = "center", dev.args=list(pointsize = 9)}
 m <- climograph(pcp=pcp, tmx=tmx, tmn=tmn, na.rm=TRUE, tmx.labels=FALSE, tmn.labels=FALSE, 
                 main="Maquehue Temuco Ad (Chile)", lat=-38.770, lon=-72.637)
+```
 
-## Plotting a climograph with uncertainty bands around mean values, but with no labels for 
-## tmx, tmn and pcp
+\newpage
+Plotting a climograph with uncertainty bands around mean values, but with no labels for tmx, tmn and pcp:
+```{r climograph4, fig.width = 8, fig.height = 7, , dpi=100, fig.align = "center", dev.args=list(pointsize = 9)}
 m <- climograph(pcp=pcp, tmx=tmx, tmn=tmn, na.rm=TRUE, 
                 pcp.labels=FALSE, tmean.labels=FALSE, tmx.labels=FALSE, tmn.labels=FALSE, 
                 main="Maquehue Temuco Ad (Chile)", lat=-38.770, lon=-72.637)
 ```
 
+\newpage
+To better represent the hydrological year in Chile (South America), the following figure will plot a full climograph starting in April (`start.month=4`) instead of January (`start.month=1`):
+```{r climograph5, fig.width = 8, fig.height = 7, , dpi=100, fig.align = "center", dev.args=list(pointsize = 9)}
+m <- climograph(pcp=pcp, tmx=tmx, tmn=tmn, na.rm=TRUE, 
+                start.month=4, temp.labels.dx=c(rep(-0.2,4), rep(0.2,6),rep(-0.2,2)),
+                main="Maquehue Temuco Ad (Chile)", lat=-38.770, lon=-72.637)
+```
 
-
-# Software Details
+# Software details
 This tutorial was built under: 
 
 ```{r echo=FALSE}
@@ -345,16 +358,16 @@ paste("hydroTSM", sessionInfo()$otherPkgs$hydroTSM$Version)
 
 # Appendix
 
-In order to make easier the use of \texttt{hydroTSM} for users not familiar with R, in this section a minimal set of information is provided to guide the user in the [R](http://www.r-project.org/) world.
+In order to make easier the use of \texttt{hydroTSM} for users not familiar with R, in this section a minimal set of information is provided to guide the user in the [R](https://www.r-project.org/) world.
 
 
 ## Editors, GUI
 
-*  GNU/Linux only: [ESS](http://ess.r-project.org/)
+*  **GNU/Linux only**: [ESS](https://ess.r-project.org/) (https://ess.r-project.org/)
 
-*  Windows only  : [NppToR](http://sourceforge.net/projects/npptor/)
+*  **Windows only**  : [NppToR](https://sourceforge.net/projects/npptor/) (https://sourceforge.net/projects/npptor/)
 
-*  Multi-platform: [Sublime Text](https://sublime.weberup.com/) ; [RStudio](http://www.rstudio.com/)
+*  **Multi-platform**: [Sublime Text](https://sublime.weberup.com/) (https://sublime.weberup.com/) ; [RStudio](https://www.rstudio.com/) (https://www.rstudio.com/)
 
 
 ## Importing data
@@ -363,22 +376,22 @@ In order to make easier the use of \texttt{hydroTSM} for users not familiar with
 
 *  `?zoo::read.zoo`, `?zoo::write.zoo`: functions for reading and writing time series from/to text files, respectively.
 
-*  [R Data Import/Export](https://cran.r-project.org/doc/manuals/r-release/R-data.html): https://cran.r-project.org/doc/manuals/r-release/R-data.html
+*  [**R Data Import/Export**](https://cran.r-project.org/doc/manuals/r-release/R-data.html): https://cran.r-project.org/doc/manuals/r-release/R-data.html
 
-*  [foreign R package](https://cran.r-project.org/package=foreign): read data stored in several R-external formats (dBase, Minitab, S, SAS, SPSS, Stata, Systat, Weka, ...)
+*  [**foreign** R package](https://cran.r-project.org/package=foreign): read data stored in several R-external formats (dBase, Minitab, S, SAS, SPSS, Stata, Systat, Weka, ...)
 
-*  [readxl R package](https://cran.r-project.org/package=readxl): Import MS Excel files into R. 
+*  [**readxl** R package](https://cran.r-project.org/package=readxl): Import MS Excel files into R. 
 
-*  [some examples](https://www.statmethods.net/input/importingdata.html): https://www.statmethods.net/input/importingdata.html
+*  [**some examples**](https://www.statmethods.net/input/importingdata.html): https://www.statmethods.net/input/importingdata.html
 
 
 
 ## Useful Websites
 
-*  [Quick R](https://www.statmethods.net/): https://www.statmethods.net/
+*  [**Quick R**](https://www.statmethods.net/): https://www.statmethods.net/
 
-*  [Time series in R](https://cran.r-project.org/web/views/TimeSeries.html): https://cran.r-project.org/web/views/TimeSeries.html
+*  [**Time series in R**](https://cran.r-project.org/web/views/TimeSeries.html): https://cran.r-project.org/web/views/TimeSeries.html
 
-*  [Quick reference for the `zoo` package](https://cran.r-project.org/web/packages/zoo/vignettes/zoo-quickref.pdf): https://cran.r-project.org/web/packages/zoo/vignettes/zoo-quickref.pdf
+*  [**Quick reference for the `zoo` package**](https://cran.r-project.org/web/packages/zoo/vignettes/zoo-quickref.pdf): https://cran.r-project.org/web/packages/zoo/vignettes/zoo-quickref.pdf
 
 
