veriuson and date update

--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,9 @@
 NEWS/ChangeLog for hydroTSM
 --------------------------
 0.7-0   (under-development)
-        o new function: 'subhourly2hourly' for aggregating sub-hourly values into hourly ones.
+        o new function  : 'subhourly2hourly' for aggregating sub-hourly values into hourly ones.
+
+        o 'hip'         :   -) new argument 'tz' to allow the user to specify the desired time zone. By default, "tz='GMT'", while previous versions implicitly used "tz=''" (local time zone)
 
         o 'hydroplot'   :   -) now works correctly with zoo objects that have multiple columns, and separate (internal) functions are provided for zoo and data.frame objects.
                             -) 'from' argument has a default value of NULL
@@ -32,7 +34,7 @@ NEWS/ChangeLog for hydroTSM
                             -) new argument 'tz' to indicate the time zone used for both 'start' argument and the datetimes of the object
         o 'daily2annual'  : -) for zoo objects, dates are correctly given in the output when FUN=min or FUN=max (e.g. for getting the date of the annual maximum or minimum)
         o 'izoo2rzoo'     : -) new argument 'tz' to correctly handle subdaily zoo objects (e.g., forcing GMT as time zone instead of the local time zone).
-        o 'hydrokrige'    : -) falgged as 'deprecated' (in the future it will be improved and moved into a different package)
+        o 'hydrokrige'    : -) flagged as 'deprecated' (in the future it will be improved and moved into a different package)
         o NAMESPACE file:   -) 'hydroplot', 'sname2plot' and 'hypsometric' are now exported S3 methods
 
 
